Cleaning unused tools and adding ghostty and fish shell

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,4 +1,5 @@
 # By default Reload config with shft + cmd + , 
+shell-integration = fish
 
 theme = catppuccin-macchiato
 #theme = rose-pine-moon
@@ -32,7 +33,7 @@ copy-on-select = clipboard
 # For Simple Keybinds
 # keybind = super+r=reload_config 
 keybind = super+i=inspector:toggle
-keybind = ctrl+\=toggle_quick_terminal
+keybind = super+ctrl+\=toggle_quick_terminal
 
 # Similar Tmux but with Ghostty
 # (ctrl b for tmux -> cmb b for ghostty)
@@ -64,6 +65,3 @@ keybind = super+b>h=goto_split:left
 keybind = super+b>j=goto_split:bottom
 keybind = super+b>k=goto_split:top
 keybind = super+b>l=goto_split:right
-
-#Autocommands (auto attach tmux when open ghostty)
-#command = zsh --login -c "if command -v tmux >/dev/null 2>&1; then tmux attach || tmux; else zsh; fi"
