--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,3 +1,5 @@
+# Enable mouse support
+set -g mouse on
 set -g default-terminal "screen-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
