--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -28,8 +28,6 @@ setw -g pane-base-index 1     # make pane numbering consistent with windows
 
 set -g renumber-windows on    # renumber windows when a window is closed
 
-set-option -g confirm-before-kill off
-
 # set -g set-titles on          # set terminal title
 
 # set -g display-panes-time 800 # slightly longer pane indicators display time
@@ -46,6 +44,14 @@ set -g visual-activity off
 
 
 # -- navigation ----------------------------------------------------------------
+
+# window navigation
+bind -n C-Right select-window -n  # Ctrl + Right Arrow to move to next window
+bind -n C-Left select-window -p   # Ctrl + Left Arrow to move to previous window
+
+# swap windows
+bind-key Left swap-window -t -1   # Ctrl + A, Left Arrow to swap with previous window
+bind-key Right swap-window -t +1  # Ctrl + A, Right Arrow to swap with next window
 
 unbind v
 bind v copy-mode
@@ -65,10 +71,19 @@ bind - split-window -v
 bind _ split-window -h
 
 # pane navigation
-bind -r h select-pane -L  # move left
-bind -r j select-pane -D  # move down
-bind -r k select-pane -U  # move up
-bind -r l select-pane -R  # move right
+unbind n
+unbind p
+bind -n C-h select-pane -L  # move left
+bind -n C-j select-pane -D  # move down
+bind -n C-k select-pane -U  # move up
+bind -n C-l select-pane -R  # move right
+# Jump to last active pane with Ctrl + Tab
+# bind -n C-Tab last-pane
+# Move to next pane with Ctrl + Space
+# bind -n C-Space select-pane -t :.+
+
+unbind '<'
+unbind '>'
 bind > swap-pane -D       # swap current pane with the next one
 bind < swap-pane -U       # swap current pane with the previous one
 
@@ -81,12 +96,6 @@ bind -r J resize-pane -D 2
 bind -r K resize-pane -U 2
 bind -r L resize-pane -R 2
 
-# window navigation
-unbind n
-unbind p
-bind -r C-h previous-window # select previous window
-bind -r C-l next-window     # select next window
-bind Tab last-window        # move to last active window
 
 unbind-key x
 bind-key x kill-pane
